jsoup changelog

*** Release 1.14.2 [PENDING]
  * Improvement: support Pattern.quote \Q and \E escapes in the selector regex matchers.
    <https://github.com/jhy/jsoup/pull/1536>

  * Bugfix: when serializing output, escape characters that are in the < 0x20 range. This improves XML output
    compatibility, and makes HTML output with these characters easier to read (as they're otherwise invisible).
    <https://github.com/jhy/jsoup/issues/1556>

  * Bugfix: the *|el wildcard namespace selector now also matches elements with no namespace.
    <https://github.com/jhy/jsoup/issues/1565>
    
  * Bugfix: corrected a potential case of the parser input stream not being closed immediately on a read exception.

  * Bugfix: when making a HTTP POST, if the request write fails, make sure the connection is immediately cleaned up.

  * Bugfix: in the XML parser, XML processing instructions without attributes would be serialized as if they did.
    <https://github.com/jhy/jsoup/issues/770>

  * Bugfix: updated the HtmlTreeParser resetInsertionMode to the current spec for supported elements.
    <https://github.com/jhy/jsoup/issues/1491>

  * Bugfix: fixed an NPE when parsing fragment HTML into a standalone table element.
    <https://github.com/jhy/jsoup/issues/1603>

  * Bugfix: fixed an NPE when parsing fragment heading HTML into a standalone p element.
    <https://github.com/jhy/jsoup/issues/1601>

  * Bugfix: fixed an IOOB when parsing a formatting fragment into a standalone p element.
    <https://github.com/jhy/jsoup/issues/1602>

  * Bugfix: tag names must start with an ascii-alpha character.
    <https://github.com/jhy/jsoup/issues/1006>

  * Bugfix [Fuzz]: fixed a slow parse when a tag or an attribute name has thousands of null characters in it.
    <https://github.com/jhy/jsoup/issues/1580>

  * Bugfix [Fuzz]: the adoption agency algorithm can have an incorrect bookmark position
    <https://github.com/jhy/jsoup/issues/1576>
