@@ -3,6 +3,7 @@ package org.jsoup.nodes;
 import org.jsoup.Jsoup;
 import org.jsoup.TextUtil;
 import org.jsoup.parser.Tag;
+import org.jsoup.select.Elements;
 import org.jsoup.select.NodeVisitor;
 import org.junit.jupiter.api.Test;
 
@@ -130,6 +131,21 @@ public class NodeTest {
         Document doc = Jsoup.parse("<a href='./one/two.html'>One</a>", "http://example.com");
         Element a1 = doc.select("a").first();
         assertEquals("http://example.com/one/two.html", a1.absUrl("href"));
+    }
+
+    @Test public void handlesAbsOnUnknownProtocols() {
+        // https://github.com/jhy/jsoup/issues/1610
+        // URL would throw on unknown protocol tel: as no stream handler is registered
+
+        String[] urls = {"mailto:example@example.com", "tel:867-5309"}; // mail has a handler, tel doesn't
+        for (String url : urls) {
+            Attributes attr = new Attributes().put("href", url);
+            Element noBase = new Element(Tag.valueOf("a"), null, attr);
+            assertEquals(url, noBase.absUrl("href"));
+
+            Element withBase = new Element(Tag.valueOf("a"), "http://example.com/", attr);
+            assertEquals(url, withBase.absUrl("href"));
+        }
     }
 
     @Test public void testRemove() {
